apps/robot-shop/catalogue/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    service: rabbitmq
  namespace: robot-shop
spec:
  ports:
    - name: tcp-amqp
      port: 5672
      targetPort: 5672
    - name: http-management
      port: 15672
      targetPort: 15672
    - name: tcp-epmd
      port: 4369
      targetPort: 4369
  selector:
    service: rabbitmq
