apps/robot-shop/catalogue/networkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: catalogue-np
  namespace: robot-shop
spec:
  description: "Allow connection to catalogue"
  endpointSelector:
    matchLabels:
      service: catalogue
  ingress:
    - fromEndpoints:
      - matchLabels:
          service: web
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http: [ { } ]
  egress:
    - toEndpoints:
        - matchLabels:
            service: mongodb
      toPorts:
        - ports:
            - port: "27017"
              protocol: TCP
